2008-06-27  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add a IS_IM_STANZA guard expression. Clean up
	namespaces list and add their prefix if any.

	* src/server/exmpp_server_legacy_auth.erl,
	src/server/exmpp_server_privacy.erl, src/core/exmpp_dialback.erl,
	src/core/exmpp_stream.erl, src/core/exmpp_stanza.erl,
	src/core/exmpp_xml.erl, src/client/exmpp_client_roster.erl,
	src/client/exmpp_client_register.erl,
	src/client/exmpp_client_legacy_auth.erl,
	testsuite/check_legacy_auth.erl: Use new namespace macro names.

	* src/core/exmpp_stream.erl, src/core/exmpp_stanza.erl: Add functions
	to_list to wrap around exmpp_xml:document_to_list/1 and
	exmpp_xml:document_fragment_to_list/3.

	* testsuite/Makefile.am: Erlang sources depend on include/exmpp.hrl.

2008-06-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add server dialback namespace.

	* src/core/exmpp_xml.erl: Add function declare_ns_here/3 to declare
	additionnal namespaces in an element. Add function
	is_ns_declared_here/2 to known if a specific namespace is declared an
	element.

	* src/core/exmpp_stream.erl: Add function set_dialback_support/1 to
	add server dialback namespace to a stream opening.
	(opening, opening_reply): Accept 'undefined' as the
	receiving/initiating entity: no 'to' or 'from' will be added to the
	opening.

	* src/core/exmpp_stanza.erl: Add function reply_without_content/1 to
	prepare a reply to a stanza without its original content. Fix
	in the documentation.

	* src/core/exmpp_dialback.erl, src/Makefile.am, src/Emakefile.in,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Add a module
	exmpp_dialback to create server dialback stanzas.

2008-06-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stanza.erl: Add functions to remove the sender and
	the recipient.

2008-06-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_jid.erl: Remove the function to_ejabberd_short_jid/1.